<resources>
    <string name="add_level">Add level</string>
    <string name="app_name">TP</string>
    <string name="beginner">Beginner</string>
    <string name="cards_dif">Different cards</string>
    <string name="cards_equ">Equal cards!</string>
    <string name="chosen">chosen</string>
    <string name="choose_level">Choose level</string>
    <string name="choose_option">Choose option</string>
    <string name="clean_historic">Clean historic</string>
    <string name="confirm">Confirm</string>
    <string name="create_game">Create game (Server)</string>
    <string name="credits">Credits</string>
    <string name="easy">Easy</string>
    <string name="edit_levels">Edit Levels</string>
    <string name="game_client">Game Client</string>
    <string name="game_finished">Game finished!</string>
    <string name="hard">Hard</string>
    <string name="historic">Historic</string>
    <string name="infinite">Infinite</string>
    <string name="join_game">Join game (Client)</string>
    <string name="level_saved">Level saved</string>
    <string name="medium">Medium</string>
    <string name="memory_game">Memory game</string>
    <string name="multiplayer1">Multiplayer (One device)</string>
    <string name="multiplayer2">Multiplayer (Network)</string>
    <string name="new_game">New game</string>
    <string name="no_net_con">No network connection</string>
    <string name="number_pairs">Number of pairs</string>
    <string name="number_players">Number of players:</string>
    <string name="one_player">1 player</string>
    <string name="play_again">Play again Player</string>
    <string name="play_game">Play Game</string>
    <string name="player">Player</string>
    <string name="professional">Professional</string>
    <string name="score">Score</string>
    <string name="seconds">Seconds between touches</string>
    <string name="server_ip">Server IP</string>
    <string name="serverdlg_msg">Waiting for a client...</string>
    <string name="serverdlg_title">Game Server</string>
    <string name="tied_game">Tied game</string>
    <string name="title">Memory Game</string>
    <string name="touch_long">Long touch</string>
    <string name="touch_double">Double touch</string>
    <string name="touch_simple">Simple touch</string>
    <string name="turn">turn</string>
    <string name="two_players">2 players</string>
    <string name="won">won</string>
    <string name="choose_image">Choose Image</string>
    <string name="delete_level">Delete Level</string>
    <string name="images_differs">Number of images chosen differs from number of cards</string>
    <string name="deleted_level">Level Deleted</string>
    <string name="levels_list">Levels List</string>
    <string name="image_added">Images Added: </string>
    <string name="images_added">No need of more images </string>
</resources>