<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/number_players"
        android:id="@+id/textView"
        android:layout_gravity="left" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/radioGroup">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_player"
                android:checked="true"
                android:onClick="on1Player"
                android:id="@+id/radioButton1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_players"
                android:onClick="on2Player"
                android:id="@+id/radioButton2" />
        </LinearLayout>
    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplayer1"
            android:checked="true"
            android:enabled="false"
            android:id="@+id/radioButton3" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplayer2"
            android:enabled="false"
            android:id="@+id/radioButton4" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/choose_level"
        android:layout_gravity="start"
        android:id="@+id/textView2"
        android:layout_marginTop="50dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:background="@android:drawable/btn_dropdown"
        android:id="@+id/spinner" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_game"
        android:id="@+id/btnCreateGame"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:enabled="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        android:id="@+id/btnJoinGame"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:enabled="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_game"
        android:id="@+id/button1"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>