<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/number_pairs"
        android:id="@+id/textView3" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:max="13"
        android:indeterminate="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        android:id="@+id/button"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_level"
        android:id="@+id/addLevel"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/levels_list"
        android:id="@+id/spinner"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_level"
        android:id="@+id/delete"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>